tests/golden/invalid/recursive-01.rego
package recursive_01

foo {
    foo
}
